--- a/app/src/main/res/layout/fragment_paid_main.xml
+++ b/app/src/main/res/layout/fragment_paid_main.xml
@@ -20,22 +20,17 @@
             android:id="@+id/instructions_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:text="@string/instructions" />
 
         <Button
+            android:layout_centerHorizontal="true"
             android:id="@+id/jokebutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/instructions_text_view"
             android:text="@string/button_text" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleLarge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
 
     </RelativeLayout>
 
